# accessibility_platform

./: .gitignore  README.md  definitions.md  pyproject.toml  requirements.txt
Official Subnational Poverty Rates/: lac-level-1.csv  lac-level-2.csv
pipeline/: 01_build_cima.py  02_qc_coordinates.py  03_coverage_assessment.py  04_qc_figures.py  05_geocode_missing.py  run_all.py
results/: COL_geocode_verification.csv  COL_validation_detail.csv  HND_geocode_verification.csv  HND_improvement_verification.csv  bitacora_errores_pipeline.md  cima_summary.csv  cima_v2_errors.json  cima_v2_summary.csv  count_reconciliation.csv  geocode_comparison.csv  geocode_results.csv  geocoder_ground_truth_all_countries.csv  geocoder_ground_truth_score_analysis.csv  geocoder_ground_truth_summary.csv  geocoder_ground_truth_test.csv  geocoder_ground_truth_with_score.csv  pipeline_errors.json  qc_coordinate_summary.csv  reporte_irregularidades_ISO_total.md
results/presentacion_BID/: ppt_bid.js  school_coverage_assessment_final.xlsx
tests/: conftest.py  test_cima_schema.py  test_coordinates.py  test_counts.py  test_geocoding.py
